traces/bug_429.txt
src/femlib/BamgFreeFem.cpp:753: error: DEAD_STORE
  The value written to &eold (type int) is never used.
Showing all 1 steps of the trace


src/femlib/BamgFreeFem.cpp:753:6: Write of unused value
751.   		      else {// erreur car un point est sur un arete en non un sommet
752.   			  bamg::GeometricalEdge * ge= on->ge;
753.   			  int eold = Gh->Number(ge); //
            ^
754.   			  int iold = Gh->Number( (*ge)[0] );
755.   			  int jold = Gh->Number( (*ge)[1] );
